https://bugs.webkit.org/show_bug.cgi?id=79824

Unreviewed build fix for when ENABLE(CSS_FILTERS) is on
but ENABLE(CSS_SHADERS) is off.

* css/WebKitCSSFilterValue.cpp:
(WebCore::WebKitCSSFilterValue::typeUsesSpaceSeparator):

Canonical link: https://commits.webkit.org/96911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109152 268f45cc-cd09-0410-ab3c-d52691b4dbfc