Source/WebCore/css/WebKitCSSFilterValue.cpp
@@ -45,6 +45,7 @@ bool WebKitCSSFilterValue::typeUsesSpaceSeparator(FilterOperationType operationT
 #if ENABLE(CSS_SHADERS)
     return operationType != CustomFilterOperation;
 #else
+    UNUSED_PARAM(operationType);
     return true;
 #endif
 }
